--- a/contactanos.html
+++ b/contactanos.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -43,26 +44,22 @@
                          <img src="assets/images/logo2.png" alt="Love Society" title="La semilla de un nuevo mundo." style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">
                         Love Society</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-5" href="index.html">
-                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Love Society &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link link text-white display-5" href="nosotros.html">
                         <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         Nosotros</a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.com"><span class="mbri-hearth mbr-iconfont mbr-iconfont-btn"></span>Se el cambio</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="contactanos.html"><span class="mbri-hearth mbr-iconfont mbr-iconfont-btn"></span>Se el cambio</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="mbr-section form3 cid-rpx4wc7nxb" id="form3-d">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-section form3 cid-rpx4wc7nxb" id="form3-d">
 
     
 
@@ -80,7 +77,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VB2wN8O4dEBqN7j4X5FKOTPy34LRXazxHjAmrrUrYiunCaGQSgq0vYB8S6G5pjRcoggmlA8U3ZIyiCl+2F9qd6yntbrcHjizG4NWHKri+Z/J0B+lo4E/pwqyIQadpvt8">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="AayKrEijeW78OAauFOo280orGxUh19b41c+dFLRarrNGY1d9hGDLvtT3LhUK+pBicTkmEwNcEfOoKgwQkx++ZR0keX5Dcxhl6rC6+gJo8APasDF1KUtbEgdtNfKCrJjL">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Gracias por querer cambiar el mundo.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -90,7 +87,7 @@
                         <div class="form-group col" data-for="email">
                             <input type="email" name="email" placeholder="Ingresa aqui tu correo" data-form-field="Email" required="required" class="form-control display-7" id="email-form3-d">
                         </div>
-                        <div class="col-auto input-group-btn"><button type="submit" class="btn btn-primary display-4">Suscribete</button></div>
+                        <div class="col-auto input-group-btn"><button type="submit" class="btn btn-primary display-4" href="mailto:lovesociety@protonmail.com">Suscribete</button></div>
                     </div>
                 </form><!---Formbuilder Form--->
             </div>
@@ -119,9 +116,9 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="IK6eImFw+7KU9oFXtU2cyExSt64kN4h4YDNrk2j8tWxf7PF+W6T/hkKOrcuU/E1zQFcytHXWuWbljSJ50CNL1KQZZL8G62D0OXyKApAVWVE4+oIzTPy2ERG+BxMYFcYR">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="khvg0D8v5CvqXEyZmkMoYk+0JhyzNBl7iQD/AXpkajGeVuR0vPAhieQTHqQ9oxpVqWh4b/kiExdnCglN9SyPiXli48/GF1SzeW5kgX4q3bthjDi5caXgRYmxhANdpJqB">
                     <div class="row row-sm-offset">
-                        <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
+                        <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Gracias por contactarnos, muy pronto nos comunicaremos contigo.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
                         </div>
                     </div>
@@ -142,9 +139,7 @@
                             <label for="message-form1-g" class="form-control-label mbr-fonts-style display-7">Message</label>
                             <textarea name="message" data-form-field="Message" class="form-control display-7" id="message-form1-g"></textarea>
                         </div>
-                        <div class="col-md-12 input-group-btn align-center">
-                            <button type="submit" class="btn btn-primary btn-form display-4">SEND FORM</button>
-                        </div>
+                        <div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-primary btn-form display-4" href="mailto:lovesociety@protonmail.com">SEND FORM</button></div>
                     </div>
                 </form><!---Formbuilder Form--->
             </div>
@@ -164,8 +159,7 @@
             <!--Titles-->
             <div class="title col-12">
                 <h2 class="align-left mbr-fonts-style display-1">
-                    Our Contacts
-                </h2>
+                    Contactanos</h2>
                 
             </div>
             <div class="col-12">
@@ -173,15 +167,13 @@
                     <div class="col-12 col-md-6">
                         <div class="wrapper">
                             <span class="iconfont-wrapper">
-                                <span class="amp-iconfont icon fa-thumbs-o-up fa"></span>
+                                <a href="https://discord.gg/VEkXRYQ" target="_blank"><span class="amp-iconfont icon fa-thumbs-o-up fa socicon-discord socicon" style="color: rgb(20, 157, 204); fill: rgb(20, 157, 204);"></span></a>
                             </span>
                             <div class="b-info b-adress">
                                 <h5 class="align-left mbr-fonts-style display-5">
-                                    Address:
-                                </h5>
+                                    Conversemos en Discord</h5>
                                 <p class="mbr-text align-left mbr-fonts-style display-7">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis fuga labore
-                                    modi natus quos veritatis?
+                                    https://discord.gg/VEkXRYQ
                                 </p>
                             </div>
                         </div>
@@ -192,13 +184,9 @@
                                 <span class="amp-iconfont icon fa-phone fa"></span>
                             </span>
                             <div class="b-info b-phone">
-                                <h5 class="align-left mbr-fonts-style display-5">
-                                    Phone:
-                                </h5>
+                                <h5 class="align-left mbr-fonts-style display-5">Whatsapp: +56978977832</h5>
                                 <p class="mbr-text align-left mbr-fonts-style display-7">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis fuga labore
-                                    modi natus quos veritatis?
-                                </p>
+                                    Prefiero 3000 veces Discord, pero lo importante es que nos comuniquemos.</p>
                             </div>
                         </div>
                     </div>
@@ -209,28 +197,21 @@
                             </span>
                             <div class="b-info b-mail">
                                 <h5 class="align-left mbr-fonts-style display-5">
-                                    E-mail:
-                                </h5>
+                                    E-mail: lovesociety@protonmail.com</h5>
                                 <p class="mbr-text align-left mbr-fonts-style display-7">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis fuga labore
-                                    modi natus quos veritatis?
-                                </p>
+                                    Queremos saber que piensas.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-12 col-md-6">
                         <div class="wrapper">
                             <span class="iconfont-wrapper">
-                                <span class="amp-iconfont icon fa-th-large fa"></span>
+                                <span class="amp-iconfont icon fa-th-large fa socicon-instagram socicon"></span>
                             </span>
                             <div class="b-info b-mail">
                                 <h5 class="align-left mbr-fonts-style display-5">
-                                    Working Hours:
-                                </h5>
-                                <p class="mbr-text align-left mbr-fonts-style display-7">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis fuga labore
-                                    modi natus quos veritatis?
-                                </p>
+                                    Instagram : game.lovesociety</h5>
+                                <p class="mbr-text align-left mbr-fonts-style display-7"></p>
                             </div>
                         </div>
                     </div>
