--- a/nosotros.html
+++ b/nosotros.html
@@ -43,26 +43,22 @@
                          <img src="assets/images/logo2.png" alt="Love Society" title="La semilla de un nuevo mundo." style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">
                         Love Society</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-5" href="index.html">
-                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Love Society &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link link text-white display-5" href="nosotros.html">
                         <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         Nosotros</a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.com"><span class="mbri-hearth mbr-iconfont mbr-iconfont-btn"></span>Se el cambio</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="contactanos.html"><span class="mbri-hearth mbr-iconfont mbr-iconfont-btn"></span>Se el cambio</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="header1 cid-rpwXjRcZmG mbr-parallax-background" id="header1-5">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="header1 cid-rpwXjRcZmG mbr-parallax-background" id="header1-5">
 
     
 
