--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="cid-qTkA127IK8 mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="cid-qTkA127IK8 mbr-parallax-background" id="header2-1">
 
     
 
@@ -260,14 +260,14 @@
                 <h2 class="pb-3 mbr-fonts-style display-2">
                     Siguenos</h2>
                 <div class="social-list pl-0 mb-0">
-                    <a href="https://twitter.com/mobirise" target="_blank">
-                        <span class="px-2 socicon-twitter socicon mbr-iconfont mbr-iconfont-social"></span>
+                    <a href="https://twitter.com/LoveSociety4" target="_blank">
+                        <span class="px-2 mbr-iconfont mbr-iconfont-social socicon-twitter socicon"></span>
                     </a>
-                    <a href="https://www.facebook.com/pages/Mobirise/1616226671953247" target="_blank">
-                        <span class="px-2 socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
+                    <a href="https://www.facebook.com/Love-Society-270158630557323" target="_blank">
+                        <span class="px-2 mbr-iconfont mbr-iconfont-social socicon-facebook socicon"></span>
                     </a>
-                    <a href="https://instagram.com/mobirise" target="_blank">
-                        <span class="px-2 socicon-instagram socicon mbr-iconfont mbr-iconfont-social"></span>
+                    <a href="https://www.instagram.com/game.lovesociety/" target="_blank">
+                        <span class="px-2 mbr-iconfont mbr-iconfont-social socicon-instagram socicon"></span>
                     </a>
                     <a href="https://www.youtube.com/c/mobirise" target="_blank">
                         
