--- a/contactanos.html
+++ b/contactanos.html
@@ -50,16 +50,16 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-5" href="nosotros.html"><span class="mbri-users mbr-iconfont mbr-iconfont-btn"></span>
-                        
+                    <a class="nav-link link text-white display-5" href="nosotros.html">
+                        <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         Nosotros</a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.com"><span class="mbri-hearth mbr-iconfont mbr-iconfont-btn"></span>Se el cambio</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="contactanos.html"><span class="mbri-hearth mbr-iconfont mbr-iconfont-btn"></span>Se el cambio</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="mbr-section contacts3 cid-rpx4yJ1owh" id="contacts3-e">
+<section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><section class="mbr-section contacts3 cid-rpx4yJ1owh" id="contacts3-e">
     <!---->
     
     <!---->
@@ -151,7 +151,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="awZd/7zWSku4IM+a6QAgIPQO4R162ci/AOq1frJ4PFUceET+o1IWqbxQxTJ9ZSdZLTNQCiXL+jhmislKIiFgVJyTM22UzU6FCJBcf7VbT2ez28yJQM1Un2XmHR24kBGq">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7cnWV1Fm3lEB4HmI+DwANCyLsoAbbzecvfgxZKfK9y+wih1myijiQzrYLlnOoM2YtBX3IUq/lUD/GCQgniAqS2mpOi3SvxpY9IzEw8uGZYldUV53goCfJhirLYWR8olG">
                     <div class="row row-sm-offset">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Gracias por contactarnos, muy pronto nos comunicaremos contigo.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -200,7 +200,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2+xv9xVKFpO/9kdE7s8XVQZJyjUa0+gL9NXfFztH+7SoKZWeW3aWsy8PgdrWXPrEZhUfqffOeJDAr3N85KmQQLXuZBmDWjhRkRS9iGVOgkPklwkzmV9Uyemy5hOZJMJt">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="U67tajM/KLs4wwxXjJ0mJTg6Wt2CXQBR3i0hVkJ+mQd+NKNN9W1vQm/pntUzcX1cdboF7iu1yyNWJHkQm3zWsGCtE6i5LxU8Rbky+GmTP8Uh/VrS+gmyWZ4tPZbZSF+Z">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Gracias por querer cambiar el mundo.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
