--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-5" href="nosotros.html"><span class="mbri-users mbr-iconfont mbr-iconfont-btn"></span>
-                        
+                    <a class="nav-link link text-white display-5" href="nosotros.html">
+                        <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         Nosotros</a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.com"><span class="mbri-hearth mbr-iconfont mbr-iconfont-btn"></span>Se el cambio</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="contactanos.html"><span class="mbri-hearth mbr-iconfont mbr-iconfont-btn"></span>Se el cambio</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="cid-qTkA127IK8 mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="cid-qTkA127IK8 mbr-parallax-background" id="header2-1">
 
     
 
@@ -103,7 +103,7 @@
         <div class="hoursCountdown" title="Hours"></div> 
         <div class="minutesCountdown" title="Minutes"></div> 
         <div class="secondsCountdown" title="Seconds"></div>
-        <div class="countdown pt-5 mt-2" data-due-date="2018/01/01"> 
+        <div class="countdown pt-5 mt-2" data-due-date="2019/05/05"> 
         </div>
     </div>
 </section>
