--- a/nosotros.html
+++ b/nosotros.html
@@ -49,16 +49,16 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-5" href="nosotros.html"><span class="mbri-users mbr-iconfont mbr-iconfont-btn"></span>
-                        
+                    <a class="nav-link link text-white display-5" href="nosotros.html">
+                        <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         Nosotros</a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.com"><span class="mbri-hearth mbr-iconfont mbr-iconfont-btn"></span>Se el cambio</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="contactanos.html"><span class="mbri-hearth mbr-iconfont mbr-iconfont-btn"></span>Se el cambio</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header1 cid-rpwXjRcZmG mbr-parallax-background" id="header1-5">
+<section class="engine"><a href="https://mobirise.info/m">site design templates</a></section><section class="header1 cid-rpwXjRcZmG mbr-parallax-background" id="header1-5">
 
     
 
